--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ EMAIL_HOST_PASSWORD='SG.SwBFGTXQQu2Yggcvd6CXbQ.yPKFVucynaF3BxBHWmMJ1P2DkbHpTJwzR
 AWS_ACCESS_KEY_ID='AKIAWZRQG6YB6AULJEWD'
 AWS_SECRET_ACCESS_KEY='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'
 AWS_STORAGE_BUCKET_NAME='mayanis3'
+server_IP='127.0.0.1'
