--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ACCOUNT_SID='ACd9f25f76012a61b20630ca4c4d39b440'
 AUTH_TOKEN='d0b8cb13d6bd7cf67bc1a2ea2b55193f'
 EMAIL_HOST_PASSWORD='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'
 #S3
-AWS_ACCESS_KEY_ID='AKIAWZRQG6YB6AULJEWD'
-AWS_SECRET_ACCESS_KEY='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'
+AWS_ACCESS_KEY_ID='AKIAWZRQG6YB5AB6WSN7'
+AWS_SECRET_ACCESS_KEY='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'
 AWS_STORAGE_BUCKET_NAME='mayanis3'
 server_IP='127.0.0.1'
